--- a/site/prayers/style.css
+++ b/site/prayers/style.css
@@ -4,7 +4,6 @@ html,
 body {
     width: 100vw;
     height: 100vh;
-    background-color: #222 !important;
     color-scheme: dark;
     overflow: hidden;
     font-size: 125%;
@@ -73,6 +72,13 @@ body {
 .panel-body {
     overflow: auto;
     height: 100%;
+    background-color: #000;
+    transition: background-color ease-in-out .5s;
+}
+
+.panel-body:focus {
+    outline: none;
+    background-color: #222;
 }
 
 .panel-body::-webkit-scrollbar {
@@ -80,6 +86,8 @@ body {
 }
 
 .page-changer {
+    opacity: 0;
+
     position: absolute;
     top: 50%;
 
@@ -92,7 +100,13 @@ body {
     font-size: 200%;
     cursor: pointer;
 
-    transition: background-color ease-in-out .2s;
+    transition:
+        background-color ease-in-out .2s,
+        opacity ease-in-out 2s;
+}
+
+.panel-body:focus~.page-changer {
+    opacity: 1;
 }
 
 .page-changer:hover {
