Making all basic prayer lines highlightable.

--- a/site/prayers/style.css
+++ b/site/prayers/style.css
@@ -168,6 +168,10 @@ body {
 
 /* Specifics */
 
+.highlightable-line {
+    justify-self: normal;
+}
+
 #litany {
     background-image: url(./images/precious-blood-litany.jpg);
     background-repeat: no-repeat;
