--- a/site/sidebar/style.css
+++ b/site/sidebar/style.css
@@ -4,22 +4,30 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: #000;
+  width: 100vw;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
+
 #root {
   color: white;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1.5vh;
 
-  width: 100vw;
+  width: auto;
   height: 100vh;
-  overflow: hidden;
+  aspect-ratio: 44 / 90;
 
-  background-color: #000;
+  overflow: hidden;
 
   display: grid;
   grid-template-rows: 28% 1fr;
 }
 
-#top iframe {
+#top>* {
   width: 100%;
   height: 100%;
 }
