--- a/site/sidebar/style.css
+++ b/site/sidebar/style.css
@@ -27,19 +27,21 @@ body {
   grid-template-rows: 28% 1fr;
 }
 
-#top>* {
+#top,
+#top2 {
+  position: relative;
+  height: 100%;
+}
+
+#top iframe {
+  border: 0;
   width: 100%;
   height: 100%;
 }
 
-#top>iframe {
-  border: 0;
-}
-
 #top img {
-  max-width: 100%;
-  max-height: 100%;
-  aspect-ratio: 496 / 279;
+  width: 100%;
+  /* height: 100%; */
 }
 
 #bottom {
@@ -50,7 +52,7 @@ body {
   background-position: top center;
 }
 
-#bottom #navlinks {
+#navlinks {
   background-color: #0007;
   position: absolute;
   top: 0;
@@ -60,7 +62,7 @@ body {
   gap: 0.75em;
 }
 
-#bottom #navlinks a {
+#navlinks a {
   color: inherit;
 }
 
