Only fade Rosary mysteries in and out.

--- a/site/prayers/style.css
+++ b/site/prayers/style.css
@@ -132,11 +132,14 @@ a {
 
 .highlightable-line {
     opacity: .2;
-    transition: opacity ease-in-out 250ms;
 }
 
 .highlightable-line.active {
     opacity: 1;
+}
+
+.half-grid.highlightable-line {
+    transition: opacity ease-in-out 250ms;
 }
 
 span.highlightable-line.active {
