--- a/site/admin/fathers/document.css
+++ b/site/admin/fathers/document.css
@@ -20,21 +20,6 @@ main>* {
   overflow: auto;
 }
 
-#left-panel {
-  display: grid;
-  grid-template-rows: auto 1fr;
-  align-content: start;
-  overflow: auto;
-}
-
-#left-panel>* {
-  overflow: auto;
-}
-
-#left-panel>:nth-child(2) {
-  padding-right: 1em;
-}
-
 iframe {
   width: 100%;
   height: 100%;
@@ -42,10 +27,8 @@ iframe {
 
 form {
   display: grid;
-  grid-template-columns: auto 1fr;
-  align-items: baseline;
+  grid-template-rows: 1fr auto;
   gap: 0.25em;
-  padding: 0.25em;
 }
 
 form button {
