--- a/site/prayers/style.css
+++ b/site/prayers/style.css
@@ -1,89 +1,52 @@
-/* General */
-
-html,
-body {
+#tab-container {
     width: 100vw;
     height: 100vh;
-    color-scheme: dark;
+
     overflow: hidden;
-    font-size: 2vh;
-    white-space: pre-wrap;
-
-    --blue: #5bf;
-}
-
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-a {
-    color: var(--blue);
-}
-
-/* Tabs */
-
-#tabs-names {
-    opacity: 0.1;
-    transition: opacity 200ms ease-in-out;
-}
-
-#tabs-names:hover {
-    opacity: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 #tabs-names {
-    position: fixed;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 1;
-
-    display: grid;
-    grid-auto-flow: column;
-    justify-content: start;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+    display: flex;
+    justify-content: center;
+    gap: 1em;
+    margin-bottom: 1em;
+    font-size: 150%;
 }
 
 #tabs-names button {
-    padding: 0.5em 1em;
-    display: inline-block;
-    color: #aaa;
-    background: #222;
-
-    font: inherit;
+    padding: 0;
+    outline: none;
     border: none;
+    background: inherit;
+    font: inherit;
     border-bottom: 2px solid transparent;
-    cursor: pointer;
-}
-
-#tabs-names button:hover {
-    color: #fff;
 }
 
 #tabs-names button.active {
-    color: #fff;
-    border-bottom-color: var(--blue);
+    border-color: var(--blue-bg);
 }
 
-/* Slideshows */
+#tabs-names button:hover:not(.active) {
+    border-color: #fff;
+}
+
+#tabs-bodies {
+    font-size: 2vh;
+    flex: 0 1 auto;
+    overflow: hidden;
+}
 
 .slideshow {
-    display: grid;
-    grid-auto-flow: column;
+    display: flex;
+    height: 100%;
 }
 
 .panel {
+    flex: 1 0 100%;
+    height: 100%;
     position: relative;
-}
-
-.panel {
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
 }
 
 .panel-body {
@@ -114,7 +77,7 @@ a {
     padding: .25em .5em;
     color: #fff;
     background-color: #0001;
-    font-size: 200%;
+    /* font-size: 200%; */
     cursor: pointer;
 
     transition:
@@ -130,48 +93,28 @@ a {
     background-color: #0007;
 }
 
-.highlightable-line {
-    opacity: .2;
+.half-grid {
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    gap: 2em;
 }
-
-.highlightable-line.active {
-    opacity: 1;
-}
-
-.half-grid.highlightable-line {
-    transition: opacity ease-in-out 250ms;
-}
-
-span.highlightable-line.active {
-    text-shadow: 0 0 12px #ff0;
-}
-
-/* Layout */
 
 .centered {
-    display: grid;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    justify-items: center;
-    align-content: center;
     align-items: center;
 }
 
-h1,
-h2 {
-    color: var(--blue);
-    margin: 1em 0;
+.two-cols {
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 0 .5em;
 }
 
-.column {
-    max-width: 33em;
-}
-
-.column.wide {
-    max-width: 60em;
-}
-
-.column.wider {
-    max-width: 70em;
+.two-cols>*:nth-child(2n) {
+    text-align: right;
 }
 
 .spaced-mini {
@@ -190,20 +133,37 @@ h2 {
     padding: 7em 0;
 }
 
-.two-cols {
-    display: grid;
-    grid-template-columns: auto auto;
-    gap: 0 .5em;
+.highlightable-line {
+    opacity: .2;
+    white-space: pre-wrap;
+    align-self: normal;
 }
 
-.two-cols>*:nth-child(2n) {
-    text-align: right;
+.highlightable-line.active {
+    opacity: 1;
 }
 
-/* Specifics */
+.half-grid.highlightable-line {
+    transition: opacity ease-in-out 250ms;
+}
 
-.left-align {
-    justify-self: normal;
+span.highlightable-line.active {
+    text-shadow: 0 0 12px #ff0;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+h1,
+h2 {
+    color: var(--blue-bg);
+    margin: 1em 0;
+}
+
+.red {
+    color: #f77;
 }
 
 #litany {
@@ -211,19 +171,4 @@ h2 {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-}
-
-.half-grid {
-    height: 100%;
-    display: grid;
-    grid-template-columns: 50% 50%;
-}
-
-img {
-    max-width: 50vw;
-    max-height: 100vh;
-}
-
-.red {
-    color: #f77;
 }
