--- a/site/prayers/style.css
+++ b/site/prayers/style.css
@@ -94,10 +94,11 @@
   transform: translateY(-50%);
   border: 0;
   outline: 0;
-  padding: .25em .5em;
+  padding: .25em .75em;
+
+  font: inherit;
   color: #fff;
   background-color: #0001;
-  /* font-size: 200%; */
   cursor: pointer;
 
   transition:
