--- a/site/css/base.css
+++ b/site/css/base.css
@@ -29,6 +29,11 @@ body {
 
 a {
   color: var(--blue-bg);
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 [disabled] {
