Better books page tabs.

--- a/site/css/components/tabs.css
+++ b/site/css/components/tabs.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-auto-flow: column;
   justify-content: center;
+  gap: 1em;
 }
 
 #tabs-buttons button {
@@ -10,7 +11,7 @@
   border-bottom: 2px solid transparent;
   font: inherit;
   background: transparent;
-  padding: 1em;
+  padding: 0em;
 }
 
 #tabs-buttons button.active {
