--- a/site/css/components/quicklinks.css
+++ b/site/css/components/quicklinks.css
@@ -110,54 +110,34 @@
 
 
 #featured-books-area {
-  background: var(--bgalt);
-}
-
-#featured-books-container {
-  margin: 0 auto;
-  max-width: calc(100% - 2em);
-}
-
-#featured-books {
-  padding-left: 0;
-  list-style-type: none;
-
-  display: grid;
-  gap: 1em;
-}
-
-@media (min-width: 450px) {
-  #featured-books {
-    grid-template-columns: repeat(auto-fill, minmax(18em, 1fr));
-  }
-}
-
-.featured-book {
-  padding: 0 1em 1em;
-}
-
-.featured-book a {
-  color: inherit;
-}
-
-.featured-book,
-.featured-book>* {
   position: relative;
+  padding: 1em 0;
 }
 
-.featured-book .thumb {
-  position: absolute;
+#featured-books-area::before {
+  content: '';
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0.5;
-  background-color: var(--bgalt);
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  opacity: 0.3;
+  background: url(/img/categories/instruction-big.jpg);
   background-position: center;
   background-size: cover;
   box-sizing: border-box;
+  z-index: -1;
 }
 
-.featured-book p {
-  margin: 0;
+#featured-books-area ul {
+  padding: 0;
+  list-style-type: none;
+
+  display: grid;
+  grid-template-columns: 50% 50%;
+  gap: 1em;
+}
+
+#featured-books-area h3 {
+  margin-bottom: 0;
 }
