--- a/site/css/base.css
+++ b/site/css/base.css
@@ -150,6 +150,7 @@ input:not(:read-write) {
   border-bottom: 2px solid transparent;
   color: inherit;
   text-decoration: none;
+  font-weight: normal;
 }
 
 .tab-links a.active {
