--- a/site/css/components/site-header.css
+++ b/site/css/components/site-header.css
@@ -3,6 +3,8 @@ header#page-hero {
 
   position: relative;
   background-color: var(--bgalt);
+  box-shadow: 0px 0px 7px 7px #0003;
+  z-index: 1;
 }
 
 header#page-hero>div {
