--- a/site/prayers/style.css
+++ b/site/prayers/style.css
@@ -183,7 +183,9 @@ img {
   background-color: var(--blue-bg);
   position: absolute;
   box-sizing: border-box;
-  transition: all 300ms ease-in-out;
+  transition:
+    left 300ms ease-in-out,
+    width 300ms ease-in-out;
 }
 
 #underline.suppress {
