--- a/site/prayers/style.css
+++ b/site/prayers/style.css
@@ -191,3 +191,17 @@ img {
 #underline.suppress {
   transition: none;
 }
+
+#underline.bounce {
+  animation: hover 500ms ease-in-out infinite alternate;
+}
+
+@keyframes hover {
+  0% {
+    margin-top: 0px;
+  }
+
+  100% {
+    margin-top: 7px;
+  }
+}
