--- a/site/prayers/style.css
+++ b/site/prayers/style.css
@@ -49,7 +49,7 @@
   transform: translateY(-50%);
   border: 0;
   outline: 0;
-  padding: .5em .75em;
+  padding: .5em 1em;
 
   font: inherit;
   color: #fff;
