--- a/site/prayers/style.css
+++ b/site/prayers/style.css
@@ -27,13 +27,14 @@
 .panel-body {
   overflow: auto;
   height: 100%;
-  background-color: #000;
-  transition: background-color ease-in-out .5s;
+  /* background-color: #222; */
+  transition: opacity ease-in-out .5s;
+  opacity: 0.33;
 }
 
 .panel:focus-within .panel-body {
   outline: none;
-  background-color: #222;
+  opacity: 1;
 }
 
 .panel-body::-webkit-scrollbar {
