--- a/site/prayers/style.css
+++ b/site/prayers/style.css
@@ -153,7 +153,18 @@ img {
 }
 
 #litany {
-  background-image: url(./images/precious-blood-litany.jpg);
+  position: relative;
+}
+
+#litany::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  content: '';
+  opacity: 0.12;
+  background-image: url(https://uploads7.wikiart.org/00381/images/peter-paul-rubens/christ-attended-by-angels-holding-chalices-peter-paul-rubens.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
