--- a/site/sidebar/style.css
+++ b/site/sidebar/style.css
@@ -30,7 +30,7 @@ body {
 
 #bottom {
   position: relative;
-  background-image: url(./pic.jpg);
+  background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Bartolom%C3%A9_Esteban_Murillo_-_The_Heavenly_and_Earthly_Trinities_-_1681-82.jpg/1411px-Bartolom%C3%A9_Esteban_Murillo_-_The_Heavenly_and_Earthly_Trinities_-_1681-82.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
