--- a/site/css/base.css
+++ b/site/css/base.css
@@ -70,7 +70,6 @@ select {
   background-color: var(--bgalt);
   color: inherit;
   border: none;
-  border-radius: 0;
   outline: 1px solid var(--border-color);
   box-sizing: border-box;
   font-family: system-ui;
@@ -86,6 +85,9 @@ button {
 button:active,
 select:focus {
   outline: 1px solid var(--blue-bg);
+  box-shadow:
+    0 0 1px 0px var(--blue-bg) inset,
+    0 0 1px 0px var(--blue-bg);
   background-color: var(--bgalt);
 }
 
@@ -117,6 +119,9 @@ label:has(input[type=radio]:checked)::before {
 
 label:has(input[type=radio]:checked) {
   outline: 1px solid var(--blue-bg);
+  box-shadow:
+    0 0 1px 0px var(--blue-bg) inset,
+    0 0 1px 0px var(--blue-bg);
   background-color: var(--bgalt);
 }
 
