--- a/site/css/components/quicklinks.css
+++ b/site/css/components/quicklinks.css
@@ -35,6 +35,8 @@
   text-decoration: none;
   transition: 75ms ease-in transform, 75ms ease-in filter;
   filter: saturate(0.5) brightness(0.5);
+
+  position: relative;
 }
 
 .quicklinks a.link:hover {
@@ -47,13 +49,18 @@
 }
 
 .quicklinks a.link:hover>span {
-  background: #0007;
+  background: #000c;
   opacity: 1;
 }
 
 .quicklinks a.link>span {
+  pointer-events: none;
+  position: absolute;
+  top: -33px;
+  white-space: nowrap;
+
   background: #0003;
-  padding: 7px;
+  padding: 7px 12px;
   transition: 75ms ease-in opacity;
   opacity: 0;
   text-shadow: 0px 1px 3px #000;
