--- a/site/prayers/style.css
+++ b/site/prayers/style.css
@@ -42,7 +42,7 @@
 }
 
 .page-changer {
-  opacity: 0;
+  opacity: 0.25;
 
   position: absolute;
   top: 50%;
@@ -53,20 +53,19 @@
   padding: .5em 1em;
 
   font: inherit;
+  background-color: #0003;
   color: #fff;
-  background-color: #0001;
-  cursor: pointer;
 
   transition:
-    background-color ease-in-out .2s,
-    opacity ease-in-out 2s;
+    background-color ease-in-out 300ms,
+    opacity ease-in-out 300ms;
 }
 
 .panel:focus-within .page-changer {
   opacity: 1;
 }
 
-.page-changer:hover {
+.panel:focus-within .page-changer:hover {
   background-color: #0007;
 }
 
