--- a/site/css/page/snippets.css
+++ b/site/css/page/snippets.css
@@ -8,6 +8,11 @@
   padding: 0 0.5em;
 }
 
+.snippets-filters .radios {
+  display: flex;
+  gap: 1em;
+}
+
 .snippets-filters .label {
   opacity: 0.5;
   font-variant: small-caps;
