Reverting back to this. I think it looks good this time though.

--- a/site/css/base.css
+++ b/site/css/base.css
@@ -55,8 +55,10 @@ hr {
 }
 
 blockquote {
-  border-left: 3px solid var(--border-color);
-  padding-left: 1em;
+  background-color: #fff1;
+  border-radius: 3px;
+  padding: 0 1em;
+  overflow: hidden;
   margin: 0;
 }
 
