--- a/site/snippets/snippet-links.css
+++ b/site/snippets/snippet-links.css
@@ -4,6 +4,7 @@
 
   padding-top: 1em;
   margin-bottom: 2em;
+  margin-top: 2em;
   border-top: 1px dashed var(--border-color);
   border-bottom: 1px dashed var(--border-color);
 }
