--- a/site/admin/articles/new-article.css
+++ b/site/admin/articles/new-article.css
@@ -1,60 +1,28 @@
-body {
-  padding: 0;
-  margin: 0;
-  overflow: hidden;
-  display: grid;
-  grid-template-rows: minmax(0, 1fr);
-}
+form {
 
-main {
   width: 100vw;
   height: 100vh;
-  display: grid;
+  padding: 2em 0;
   box-sizing: border-box;
-  padding: 1em;
+
+  display: flex;
+  flex-direction: column;
   gap: 1em;
-  grid-template-columns: 15fr 20fr 15fr 30fr;
-}
 
-main>* {
-  overflow: auto;
-}
+  align-items: center;
+  justify-content: stretch;
 
-#left-panel {
-  display: grid;
-  grid-template-rows: auto 1fr;
-  align-content: start;
-  overflow: auto;
-}
+  > * {
+    width: 33em;
+  }
 
-#left-panel>* {
-  overflow: auto;
-}
+  input,
+  button {
+    flex: 0 0 auto;
+  }
 
-#left-panel>:nth-child(2) {
-  padding-right: 1em;
-}
+  textarea {
+    flex: 1 0 auto;
+  }
 
-iframe {
-  width: 100%;
-  height: 100%;
-}
-
-form {
-  display: grid;
-  grid-template-columns: auto 1fr;
-  align-items: baseline;
-  gap: 0.25em;
-  padding: 0.25em;
-}
-
-form button {
-  cursor: pointer;
-}
-
-form ul {
-  padding-left: 0;
-  list-style-type: none;
-  max-height: 10em;
-  overflow: auto;
 }
