--- a/site/linktree/linktree.css
+++ b/site/linktree/linktree.css
@@ -28,14 +28,15 @@ html::before {
   }
 
   &:is(a) {
-    background-color: #333a;
+    background-color: #0007;
+    color: crimson;
     box-shadow:
       0px -1px 1px 0px #fff3,
       0px 1px 1px 0px #0007;
     text-decoration: none;
 
     &[href]:hover {
-      background-color: #444;
+      background-color: #0004;
     }
   }
 }
